replaced mocha/chai with ava

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "NODE_ENV=test mocha"
+    "test": "NODE_ENV=test ava"
   },
   "author": "Matti Luukkainen",
   "license": "MIT",
@@ -25,8 +25,7 @@
     "sequelize": "^4.13.8"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "mocha": "^4.0.1",
+    "ava": "^0.22.0",
     "nodemon": "^1.12.1",
     "supertest": "^3.0.0"
   }
