api tests and caching department stats

--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "NODE_ENV=test ava"
+    "test": "NODE_ENV=test ava",
+    "lint": "eslint --parser babel-eslint src",
+    "coverage": "NODE_ENV=test nyc ava"
   },
   "author": "Matti Luukkainen",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.16.2",
     "bcrypt": "^1.0.3",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
@@ -22,11 +25,15 @@
     "npm": "^5.4.2",
     "pg": "^7.3.0",
     "pg-hstore": "^2.3.2",
+    "redis": "^2.8.0",
     "sequelize": "^4.13.8"
   },
   "devDependencies": {
     "ava": "^0.22.0",
+    "babel-eslint": "^8.0.1",
+    "eslint": "^4.9.0",
     "nodemon": "^1.12.1",
+    "nyc": "^11.2.1",
     "supertest": "^3.0.0"
   }
 }
