--- a/package.json
+++ b/package.json
@@ -2,18 +2,25 @@
   "name": "oodikone2-frontend",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/UniversityOfHelsinkiCS/oodikone2-frontend.git"
+  },
+  "licence": "",
+  "main": "src/app.js",
+  "devDependencies": {
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
-    "babel-preset-react-app": "^3.1.0",
+    "babel-plugin-inline-json-import": "^0.2.1",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
-    "chalk": "1.1.3",
     "css-loader": "0.28.7",
-    "dotenv": "4.0.0",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.0.1",
     "eslint-loader": "1.9.0",
@@ -23,26 +30,44 @@
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
-    "fs-extra": "3.0.1",
+    "glob": "^7.1.2",
     "html-webpack-plugin": "2.29.0",
+    "html-webpack-template": "^6.0.1",
     "jest": "20.0.4",
-    "object-assign": "4.1.1",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "postcss-cssnext": "^3.0.2",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
-    "promise": "8.0.1",
-    "raf": "3.4.0",
-    "react": "^16.2.0",
+    "purifycss-webpack": "^0.7.0",
     "react-dev-utils": "^4.2.1",
-    "react-dom": "^16.2.0",
-    "style-loader": "0.19.0",
+    "style-loader": "^0.19.1",
+    "stylelint": "^8.2.0",
+    "stylelint-config-standard": "^18.0.0",
     "sw-precache-webpack-plugin": "0.11.4",
-    "url-loader": "0.6.2",
+    "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
-    "webpack-manifest-plugin": "1.3.2",
+    "webpack-manifest-plugin": "1.3.2"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "dotenv": "4.0.0",
+    "lodash": "^4.17.4",
+    "moment": "^2.20.1",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-hot-loader": "^3.1.3",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
+    "dev": "webpack-dev-server --config webpack.config.local.js",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
@@ -80,13 +105,5 @@
       "jsx",
       "node"
     ]
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   }
 }
