--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^5.0.0",
     "redux-thunk": "^2.2.0",
     "whatwg-fetch": "2.0.3"
   },
