--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "git+https://github.com/UniversityOfHelsinkiCS/oodikone2-frontend.git"
   },
   "licence": "",
-  "main": "src/app.js",
+  "main": "src/app.jsx",
   "devDependencies": {
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
