--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "glob": "^7.1.2",
     "html-webpack-plugin": "2.29.0",
     "html-webpack-template": "^6.0.1",
+    "husky": "^0.14.3",
     "jest": "20.0.4",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "postcss-cssnext": "^3.0.2",
