eslint style fixes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,8 @@
       "import/no-unresolved":2,
       "react/jsx-no-bind": 2,
       "react/no-did-mount-set-state": 0,
-      "react/prefer-stateless-function": 2
+      "react/prefer-stateless-function": 2,
+      "react/no-typos": 0
 
     },
     "plugins" : [
