--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,3 +1,16 @@
 {
-  "extends": "stylelint-config-standard"
+  "extends": "stylelint-config-standard",
+  "rules": {
+    "selector-type-no-unknown": [true, {
+    "ignoreTypes": ["/^--/", "--"]
+  }],
+    "selector-pseudo-class-no-unknown": [
+      true,
+      {
+        "ignorePseudoClasses": [
+          "global"
+        ]
+      }
+    ]
+  }
 }
