--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,8 +14,9 @@
       "react/jsx-no-bind": 2,
       "react/no-did-mount-set-state": 0,
       "react/prefer-stateless-function": 2,
-      "react/no-typos": 0
-
+      "react/no-typos": 0,
+      "jsx-a11y/no-static-element-interactions": 0,
+      "jsx-a11y/click-events-have-key-events": 0
     },
     "plugins" : [
       "react",
