- added object spread to babelrc - cleaned studentStatistics

--- a/.babelrc
+++ b/.babelrc
@@ -10,7 +10,8 @@
   "env": {
     "development": {
       "plugins": [
-        "react-hot-loader/babel"
+        "react-hot-loader/babel",
+        "transform-object-rest-spread"
       ]
     },
     "test": {
