--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-loader": "7.1.2",
     "babel-plugin-inline-json-import": "^0.2.1",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-runtime": "6.26.0",
