--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "concurrently": "^3.5.1",
     "css-loader": "0.28.7",
-    "eslint": "4.10.0",
+    "eslint": "^4.10.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-react-app": "^2.0.1",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.39.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-prefer-object-spread": "^1.2.1",
     "eslint-plugin-react": "^7.5.1",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
