--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "dotenv": "4.0.0",
+    "jStat": "^1.7.1",
     "lodash": "^4.17.4",
     "moment": "^2.20.1",
     "prop-types": "^15.6.0",
