--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,11 +17,16 @@
       "react/no-typos": 0,
       "jsx-a11y/no-static-element-interactions": 0,
       "jsx-a11y/click-events-have-key-events": 0,
-      "prefer-object-spread/prefer-object-spread": 2
+      "jsx-a11y/label-has-for": 0,
+      "prefer-object-spread/prefer-object-spread": 2,
+      "prefer-arrow-callback": 2,
+      "babel/no-invalid-this": 2,
+      "babel/semi": 2
     },
     "plugins" : [
       "react",
       "import",
-      "prefer-object-spread"
+      "prefer-object-spread",
+      "babel"
     ]
 }
