--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "rimraf": "^2.6.2",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.77.2",
+    "uuid": "^3.2.1",
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
