--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "bcrypt": "^1.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "connect-session-sequelize": "^5.2.0",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "express-basic-auth": "^1.1.2",
+    "express-session": "^1.15.6",
     "install": "^0.10.1",
     "knex": "^0.13.0",
     "moment": "^2.19.1",
