--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,6 @@
             "error",
             "never"
         ],
-        "no-console": 0,
-        "indent": ["error", 2, { "MemberExpression": 1 }]
+        "no-console": 0
     }
 }
