--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "bcrypt": "^1.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
-    "connect-session-sequelize": "^5.2.0",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "express-basic-auth": "^1.1.2",
@@ -33,7 +32,8 @@
     "pg": "^7.3.0",
     "pg-hstore": "^2.3.2",
     "redis": "^2.8.0",
-    "sequelize": "^4.13.8"
+    "sequelize": "^4.13.8",
+    "umzug": "^2.1.0"
   },
   "devDependencies": {
     "dotenv": "^4.0.0",
