--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "webpack-manifest-plugin": "1.3.2"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-polyfill": "^6.26.0",
     "dotenv": "4.0.0",
