--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "docker_local": "NODE_ENV=docker_local nodemon index.js",
     "dev": "NODE_ENV=dev nodemon index.js",
     "test": "NODE_ENV=test ava",
+    "supertest": "NODE_ENV=test ava test/supertests/*.js",
     "update_database_dev": "NODE_ENV=dev node src/services/database_updater/database_updater.js",
     "update_database": "node src/services/database_updater/database_updater.js",
     "lint": "eslint --parser babel-eslint src",
@@ -46,7 +47,8 @@
   },
   "ava": {
     "files": [
-      "test/*_test.js"
+      "test/*_test.js",
+      "!test/supertest/*.js"
     ],
     "source": [
       "**/*.{js,jsx}",
