update script for specific student group, readme updated

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "supertest": "NODE_ENV=test ava test/supertests/*.js",
     "update_database_dev": "NODE_ENV=dev node src/services/database_updater/database_updater.js",
     "update_database": "node src/services/database_updater/database_updater.js",
+    "update_student_group": "GROUP=1 node src/services/database_updater/database_updater.js",
+    "update_student_group_dev": "NODE_ENV=dev GROUP=1 node src/services/database_updater/database_updater.js",
     "lint": "eslint --parser babel-eslint src",
     "coverage": "NODE_ENV=test nyc ava"
   },
