script that saves valid student numbers to database (for the database_updater)

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "update_database": "node src/services/database_updater/database_updater.js",
     "update_student_group": "GROUP=1 node src/services/database_updater/database_updater.js",
     "update_student_group_dev": "NODE_ENV=dev GROUP=1 node src/services/database_updater/database_updater.js",
+    "update_studentnumbers_dev": "NODE_ENV=dev node src/services/database_updater/student_list_updater.js",
     "lint": "eslint --parser babel-eslint src",
     "coverage": "NODE_ENV=test nyc ava"
   },
