--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,16 @@
 language: node_js
 node_js:
 - '8'
+
 cache:
   directories:
     - node_modules
+
+services:
+  - postgresql
+
+before_script:
+  - psql -c 'create database ooditest;' -U postgres
+
+env:
+  - TEST_DB=postgres://postgres@localhost/ooditest TOKEN_SECRET=salainen_token
