--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: node_js
 node_js:
-- '8'
+  - '8'
 
 cache:
   directories:
     - node_modules
+
+services:
+  - postgresql
 
 addons:
   postgresql: "10"
