--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,12 @@ addons:
     - postgresql-10
     - postgresql-client-10
 
+env:
+  global:
+  - PGPORT=5433
+
 before_script:
   - psql -c 'create database ooditest;' -U postgres
 
 env:
-  - TEST_DB=postgres://postgres@localhost/ooditest TOKEN_SECRET=salainen_token
+  - TEST_DB=postgres://postgres@localhost:5433/ooditest TOKEN_SECRET=salainen_token
