--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,17 @@
 language: node_js
 node_js:
-  - '8'
+  - '9.9'
 
 cache:
   directories:
     - node_modules
 
 addons:
-  postgresql: "10"
+  postgresql: "9.6"
   apt:
     packages:
-    - postgresql-10
-    - postgresql-client-10
+    - postgresql-9.6
+    - postgresql-client-9.6
 
 env:
   global:
@@ -21,4 +21,4 @@ before_script:
   - psql -c 'create database ooditest;' -U postgres
 
 env:
-  - TEST_DB=postgres://postgres@localhost:5433/ooditest TOKEN_SECRET=salainen_token
+  - TEST_DB=postgres://postgres@localhost/ooditest TOKEN_SECRET=salainen_token
