--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "rimraf": "^2.6.2",
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.77.2",
