--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redis": "^2.8.0",
     "sequelize": "^4.37.5",
     "umzug": "^2.1.0",
+    "uuid": "^3.2.1",
     "winston": "^2.4.1",
     "winston-papertrail": "^1.0.5"
   },
