--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ addons:
 env:
   global:
   - PGPORT=5433
+  - NODE_ENV=test
 
 before_script:
   - psql -c 'create database ooditest;' -U postgres
