--- a/package.json
+++ b/package.json
@@ -25,23 +25,25 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.5",
-    "moment": "^2.22.0",
+    "moment": "^2.22.1",
+    "morgan": "^1.9.0",
     "pg": "^7.4.1",
     "redis": "^2.8.0",
-    "sequelize": "^4.37.5",
+    "sequelize": "^4.37.6",
     "umzug": "^2.1.0",
     "uuid": "^3.2.1",
     "winston": "^2.4.1",
+    "winston-log2gelf": "^1.6.0",
     "winston-papertrail": "^1.0.5"
   },
   "devDependencies": {
     "ava": "^0.22.0",
-    "babel-eslint": "^8.2.2",
+    "babel-eslint": "^8.2.3",
     "dotenv": "^4.0.0",
     "eslint": "^4.19.1",
     "faker": "^4.1.0",
     "nodemon": "^1.17.3",
-    "nyc": "^11.6.0",
+    "nyc": "^11.7.1",
     "supertest": "^3.0.0"
   },
   "ava": {
