--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.22.1",
     "morgan": "^1.9.0",
     "pg": "^7.4.1",
+    "raven": "^2.5.0",
     "redis": "^2.8.0",
     "sequelize": "^4.37.6",
     "umzug": "^2.1.0",
