--- a/package.json
+++ b/package.json
@@ -70,14 +70,16 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-polyfill": "^6.26.0",
     "dotenv": "4.0.0",
+    "highcharts": "^6.1.0",
+    "highcharts-react-official": "^1.1.0",
     "jStat": "^1.7.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.5",
     "moment": "^2.22.0",
     "prop-types": "^15.6.1",
-    "react": "^16.3.1",
+    "react": "^16.4.0",
     "react-datetime": "^2.14.0",
-    "react-dom": "^16.3.1",
+    "react-dom": "^16.4.0",
     "react-hot-loader": "^3.1.3",
     "react-localize-redux": "^2.16.0",
     "react-redux": "^5.0.7",
