--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ services:
   - docker
 
 after_success:
-  - docker build -t toska/oodikone2-frontend:staging .
-  - docker login -u $DOCKER_USER -p $DOCKER_PASS
-  - docker push toska/oodikone2-frontend:staging    
+  - "[[ $TRAVIS_BRANCH =~ (master) ]] && docker build -t toska/oodikone2-frontend:staging ."
+  - "[[ $TRAVIS_BRANCH =~ (master) ]] && docker login -u $DOCKER_USER -p $DOCKER_PASS"
+  - "[[ $TRAVIS_BRANCH =~ (master) ]] && docker push toska/oodikone2-frontend:staging"
