--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "init_redis": "node src/util/init_redis.js",
     "seed_redis": "node src/util/add_json_duplicates_to_redis.js && node src/util/map_course_codes.js",
     "studentnumbers_to_file": "NODE_ENV=dev node src/services/doo_api_database_updater/db_studentnumbers_to_file.js",
+    "update_database_dev_new_api": "NODE_ENV=dev node src/services/doo_api_database_updater/database_updater.js",
     "lint": "eslint --parser babel-eslint src",
     "coverage": "NODE_ENV=test nyc ava"
   },
