--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.5",
+    "mkdirp": "^0.5.1",
     "moment": "^2.22.1",
     "morgan": "^1.9.0",
     "pg": "^7.4.1",
