superbara tests can be now run by writing 'npm test'

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "stats": "webpack --json --config webpack.config.production.js > stats.json",
     "prepush": "npm run lint",
     "pretest": "npm run lint",
-    "test": "echo 'no tests'"
+    "test": "./superbara_tests/run_all_tests.sh"
   },
   "licence": "",
   "main": "src/app.jsx",
