--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lint": "eslint --parser babel-eslint src",
     "coverage": "NODE_ENV=test nyc ava",
     "force_sync_database": "node src/services/doo_api_database_updater/force_sync_database.js",
-    "jest": "jest"
+    "jest": "jest --detectOpenHandles"
   },
   "author": "Matti Luukkainen",
   "license": "MIT",
@@ -52,6 +52,7 @@
     "faker": "^4.1.0",
     "jest": "^23.1.0",
     "nock": "^9.3.3",
+    "node-status": "^1.0.0",
     "nodemon": "^1.17.3",
     "nyc": "^11.7.1",
     "supertest": "^3.0.0"
