--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
   chrome: stable
 env: 
   global:
-    - DOCKER_VERSION=18.03.1-ce
+    - DOCKER_VERSION=1.37
     - DOCKER_COMPOSE_VERSION=1.21.2
     
 
