--- a/.travis.yml
+++ b/.travis.yml
@@ -6,18 +6,16 @@ cache:
     - node_modules
 addons:
   chrome: stable
+  apt:
+    packages:
+      - docker-ce
 env: 
   global:
-    - DOCKER_VERSION=1.37
     - DOCKER_COMPOSE_VERSION=1.21.2
     
 
 sudo: required
 before_install:
-  # list docker-engine versions
-  - apt-cache madison docker-engine
-  # upgrade docker-engine to specific version
-  - sudo apt-get -o Dpkg::Options::="--force-confnew" install -y docker-engine=${DOCKER_VERSION}
   # reinstall docker-compose at specific version
   - sudo rm -f /usr/local/bin/docker-compose
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
