--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ before_install:
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
+  - docker version
+  - docker-compose -v
   - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
   - gem install superbara
 before_script:
@@ -40,7 +42,7 @@ jobs:
       - docker push toska/oodikone2-frontend:testing
       - docker pull toska/oodikone2-backend:testing
       - docker-compose up -d
-      - docker exec -it db_testing sh
+      - docker exec -it testing_backend sh
       - npm run update_database
       - npm run dev
       - testing backend
