--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,14 @@ cache:
     - node_modules
 addons:
   chrome: stable
+  postgresql: "9.6"
   apt:
     packages:
       - docker-ce
+      - postgresql-9.6
+      - postgresql-client-9.6
+
+
 env: 
   global:
     - DOCKER_COMPOSE_VERSION=1.21.2
