--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
      DB_URL: postgres://tkt_oodi:test@db_testing:5432/tkt_oodi_testing
      FRONT_URL: localhost:8081
      REDIS: testing_redis
-     OODI_ADDR: anonymized api here
+     #OODI_ADDR:
    restart: unless-stopped
    container_name: testing_backend
    volumes:
