--- a/.travis.yml
+++ b/.travis.yml
@@ -32,9 +32,9 @@ after_success:
   - "docker build -t toska/oodikone2-backend:testing ."
   - "docker login -u $DOCKER_USER -p $DOCKER_PASS"
   - "docker push toska/oodikone2-backend:testing"
-  - "[[ $TRAVIS_BRANCH =~ (master) ]] && docker build -t toska/oodikone2-backend:staging ."
-  - "[[ $TRAVIS_BRANCH =~ (master) ]] && docker login -u $DOCKER_USER -p $DOCKER_PASS"
-  - "[[ $TRAVIS_BRANCH =~ (master) ]] && docker push toska/oodikone2-backend:staging"
+  - "[[ $TRAVIS_BRANCH =~ (^master) ]] && docker build -t toska/oodikone2-backend:staging ."
+  - "[[ $TRAVIS_BRANCH =~ (^master) ]] && docker login -u $DOCKER_USER -p $DOCKER_PASS"
+  - "[[ $TRAVIS_BRANCH =~ (^master) ]] && docker push toska/oodikone2-backend:staging"
   - "[[ $TRAVIS_TAG =~ ([0-1].+) ]] && docker build -t toska/oodikone2-backend:latest ."
   - "[[ $TRAVIS_TAG =~ ([0-1].+) ]] && docker login -u $DOCKER_USER -p $DOCKER_PASS"
   - "[[ $TRAVIS_TAG =~ ([0-1].+) ]] && docker push toska/oodikone2-backend:latest"
