--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,7 @@ logs/*
 run_update_script.sh
 student_numbers
 debug.log
-src/anonymized_API
+
 studentnumbers.txt
+studentnumbers*.txt
+src/anonymized_API
