--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "start": "node index.js",
     "docker_local": "NODE_ENV=docker_local nodemon index.js",
     "dev": "NODE_ENV=dev nodemon index.js",
+    "anon": "NODE_ENV=test nodemon index.js",
     "test": "NODE_ENV=test nyc ava",
     "supertest": "NODE_ENV=test ava test/supertests/*.js",
     "update_database_dev": "NODE_ENV=dev node src/services/database_updater/database_updater.js",
     "update_database": "node src/services/doo_api_database_updater/run_updater.js",
+    "update_database_anon": "NODE_ENV=test node src/services/doo_api_database_updater/run_updater.js",
     "update_studentnumbers_dev": "NODE_ENV=dev node src/services/database_updater/student_list_updater.js",
     "init_redis": "node src/util/init_redis.js",
     "update_database_dev_new_api": "NODE_ENV=dev node src/services/doo_api_database_updater/run_updater.js",
