Run tests in sequence to avoid issues with force sync db.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "docker_local": "NODE_ENV=docker_local nodemon index.js",
     "dev": "NODE_ENV=dev nodemon index.js",
     "anon": "NODE_ENV=test nodemon index.js",
-    "test": "NODE_ENV=test jest --verbose",
+    "test": "NODE_ENV=test jest --runInBand --verbose",
     "supertest": "NODE_ENV=test ava test/supertests/*.js",
     "update_database_dev": "NODE_ENV=dev node src/services/database_updater/database_updater.js",
     "update_database": "node src/services/doo_api_database_updater/run_updater.js",
