--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lint": "eslint --parser babel-eslint src",
     "force_sync_database": "node src/services/doo_api_database_updater/force_sync_database.js",
     "update_studentnumbers_dev": "NODE_ENV=dev node src/services/doo_api_database_updater/student_list_updater.js",
-    "anonymize": "node src/anonymizer/anonymizer.js"
+    "anonymize": "node src/anonymizer/anonymizer.js",
+    "seed_migrations": "node scripts/seed_migrations.js"
   },
   "author": "Matti Luukkainen",
   "license": "MIT",
