email service for new logins

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mkdirp": "^0.5.1",
     "moment": "^2.22.1",
     "morgan": "^1.9.0",
+    "nodemailer": "^4.6.7",
     "pg": "^7.4.1",
     "raven": "^2.5.0",
     "redis": "^2.8.0",
