--- a/.babelrc
+++ b/.babelrc
@@ -10,9 +10,9 @@
   "env": {
     "development": {
       "plugins": [
-        "react-hot-loader/babel",
         "transform-object-rest-spread",
-        "transform-class-properties"
+        "transform-class-properties",
+        "react-hot-loader/babel"
       ]
     },
     "test": {
