--- a/package.json
+++ b/package.json
@@ -63,8 +63,7 @@
     "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "3.1.1",
-    "webpack-manifest-plugin": "^2.0.0-rc.2",
-    "react-hot-loader": "^4.3.4"
+    "webpack-manifest-plugin": "^2.0.0-rc.2"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -82,6 +81,7 @@
     "react-datetime": "^2.14.0",
     "react-dom": "^16.4.0",
     "react-highcharts": "^16.0.2",
+    "react-hot-loader": "^4.3.4",
     "react-localize-redux": "^2.16.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
