--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "uuid": "^3.2.1",
     "winston": "^2.4.1",
     "winston-log2gelf": "^1.6.0",
-    "winston-papertrail": "^1.0.5"
+    "winston-papertrail": "^1.0.5",
+    "winston-transport": "^4.2.0"
   },
   "devDependencies": {
     "ava": "^0.22.0",
