--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Backend for Oodikone",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node --max_old_space_size=4096 index.js",
     "docker_local": "NODE_ENV=docker_local nodemon index.js",
-    "dev": "NODE_ENV=dev nodemon index.js",
+    "dev": "NODE_ENV=dev nodemon --max_old_space_size=4096 index.js",
     "anon": "NODE_ENV=test nodemon index.js",
     "test": "NODE_ENV=test jest --runInBand --verbose",
     "update_database_dev": "NODE_ENV=dev node src/services/doo_api_database_updater/run_updater.js",
