--- a/training/Dockerfile
+++ b/training/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.7-slim
+FROM python:3.6.7-slim
 
 WORKDIR /src
 
@@ -6,4 +6,4 @@ COPY . /src
 
 RUN pip install --trusted-host pypi.python.org -r requirements.txt
 
-CMD ["python", "app.py"]
+CMD ["python", "train.py"]
