--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "react-dom": "^16.4.0",
     "react-highcharts": "^16.0.2",
     "react-hot-loader": "^4.3.4",
+    "react-jsx-highcharts": "^3.3.0",
     "react-localize-redux": "^2.16.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
