added environment variable

--- a/oodilearn-compose.yml
+++ b/oodilearn-compose.yml
@@ -20,4 +20,5 @@ services:
       - "5000:5000"
     environment:
       - ENV=development
+      - MONGO_URI=mongodb://mongo_db:27017/oodilearn
     container_name: oodilearn
