--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "NODE_ENV=dev nodemon --max_old_space_size=4096 index.js",
     "anon": "NODE_ENV=test nodemon index.js",
     "test": "NODE_ENV=test jest --runInBand --verbose",
+    "test_docker": "docker exec -t backend /bin/bash -c 'npm test'",
     "update_database_dev": "NODE_ENV=dev node src/services/doo_api_database_updater/run_updater.js",
     "update_database": "node src/services/doo_api_database_updater/run_updater.js",
     "update_database_anon": "NODE_ENV=anon node src/services/doo_api_database_updater/run_updater.js",
@@ -23,7 +24,7 @@
     "update_top_teachers": "node scripts/update_top_teachers.js",
     "update_students_not_modified_since": "node scripts/update_students_not_modified_since.js",
     "refresh_studyright_associations": "node scripts/refresh_studyright_associations.js",
-    "prepush": "npm run test"
+    "prepush": "npm run test || npm run test_docker"
   },
   "author": "Matti Luukkainen",
   "license": "MIT",
