--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --config webpack.config.local.js",
-    "docker": "webpack-dev-server --host 0.0.0.0 --inline --content-base . --config webpack.config.local.js",
+    "docker": "/node_modules/.bin/webpack-dev-server --host 0.0.0.0 --inline --config webpack.config.local.js",
     "dist": "rimraf dist && webpack --config webpack.config.production.js",
     "lint": "concurrently 'npm run lint:js' 'npm run lint:css'",
     "lint:css": "stylelint 'src/**/*.css'",
