--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,8 @@ services:
       - "8081:8081"
     environment:
       BACKEND_ADDR: backend
+    volumes:
+      - ./repos/oodikone2-frontend/:/usr/src/app
     container_name: frontend
   oodilearn:
     build:
