--- a/oodilearn-compose.yml
+++ b/oodilearn-compose.yml
@@ -10,15 +10,16 @@ services:
     ports:
       - "27017:27017"
     container_name: mongo_db
-  oodilearn:
-    image: oodilearn
+  oodilearn_server:
+    image: oodilearn_server
     restart: unless-stopped
     volumes:
       - ./repos/oodilearn/server:/src
       - ./repos/oodilearn/models:/models
+      - ./repos/oodilearn/training/data:/data
     ports:
       - "5000:5000"
     environment:
       - ENV=development
       - MONGO_URI=mongodb://mongo_db:27017/oodilearn
-    container_name: oodilearn
+    container_name: oodilearn_server
