--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13",
-    "webpack-dev-server": "3.1.1",
+    "webpack-dev-server": "^3.1.10",
     "webpack-manifest-plugin": "^2.0.0-rc.2"
   },
   "dependencies": {
