--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
     "prefer-object-spread/prefer-object-spread": 2,
     "prefer-arrow-callback": 2,
     "babel/no-invalid-this": 2,
+    "lines-between-class-members": [2, "always"],
     "babel/semi": [
       2,
       "never"
