--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.5",
     "moment": "^2.22.0",
+    "path-to-regexp": "^2.4.0",
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-datetime": "^2.14.0",
