--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     volumes:
       - ./server:/src
       - ./models:/models
+      - ./data:/data
     ports:
       - "5000:5000"
     environment:
