--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "seed_migrations": "node scripts/seed_migrations.js",
     "update_top_teachers": "node scripts/update_top_teachers.js",
     "update_students_not_modified_since": "node scripts/update_students_not_modified_since.js",
-    "refresh_studyright_associations": "node scripts/refresh_studyright_associations.js"
+    "refresh_studyright_associations": "node scripts/refresh_studyright_associations.js",
+    "update_attainment_dates": "node scripts/update_max_attainment_dates.js"
   },
   "author": "Matti Luukkainen",
   "license": "MIT",
