--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "update_top_teachers": "node scripts/update_top_teachers.js",
     "update_students_not_modified_since": "node scripts/update_students_not_modified_since.js",
     "refresh_studyright_associations": "node scripts/refresh_studyright_associations.js",
-    "update_attainment_dates": "node scripts/update_max_attainment_dates.js"
+    "update_attainment_dates": "node scripts/update_max_attainment_dates.js",
+    "create_defa_report": "node scripts/create_defa_report.js"
   },
   "author": "Matti Luukkainen",
   "license": "MIT",
