--- a/.travis.yml
+++ b/.travis.yml
@@ -28,12 +28,12 @@ jobs:
         - npm run notest
     - stage: build & deploy
       script:
-        - "[[ $TRAVIS_BRANCH =~ (trunk) ]] && docker build -t toska/oodikone2-frontend:testing . || :"
-        - "[[ $TRAVIS_BRANCH =~ (trunk) ]] && docker login -u $DOCKER_USER -p $DOCKER_PASS || :"
-        - "[[ $TRAVIS_BRANCH =~ (trunk) ]] && docker push toska/oodikone2-frontend:testing || :"
-        - "[[ $TRAVIS_BRANCH =~ (^master) ]] && docker build -t toska/oodikone2-frontend:staging . || :"
-        - "[[ $TRAVIS_BRANCH =~ (^master) ]] && docker login -u $DOCKER_USER -p $DOCKER_PASS || :"
-        - "[[ $TRAVIS_BRANCH =~ (^master) ]] && docker push toska/oodikone2-frontend:staging || :"
-        - "[[ $TRAVIS_TAG =~ ([0-1].+) ]] && docker build -t toska/oodikone2-frontend:latest . || :"
-        - "[[ $TRAVIS_TAG =~ ([0-1].+) ]] && docker login -u $DOCKER_USER -p $DOCKER_PASS || :"
-        - "[[ $TRAVIS_TAG =~ ([0-1].+) ]] && docker push toska/oodikone2-frontend:latest || :"
+        - "if [[ $TRAVIS_BRANCH =~ (trunk) ]]; then docker build -t toska/oodikone2-frontend:testing . ; else :;fi"
+        - "if [[ $TRAVIS_BRANCH =~ (trunk) ]]; then docker login -u $DOCKER_USER -p $DOCKER_PASS ; else :;fi"
+        - "if [[ $TRAVIS_BRANCH =~ (trunk) ]]; then docker push toska/oodikone2-frontend:testing ; else :;fi"
+        - "if [[ $TRAVIS_BRANCH =~ (^master) ]]; then docker build -t toska/oodikone2-frontend:staging . ; else :;fi"
+        - "if [[ $TRAVIS_BRANCH =~ (^master) ]]; then docker login -u $DOCKER_USER -p $DOCKER_PASS ; else :;fi"
+        - "if [[ $TRAVIS_BRANCH =~ (^master) ]]; then docker push toska/oodikone2-frontend:staging ; else :;fi"
+        - "if [[ $TRAVIS_TAG =~ ([0-1].+) ]]; then docker build -t toska/oodikone2-frontend:latest . ; else :;fi"
+        - "if [[ $TRAVIS_TAG =~ ([0-1].+) ]]; then docker login -u $DOCKER_USER -p $DOCKER_PASS ; else :;fi"
+        - "if [[ $TRAVIS_TAG =~ ([0-1].+) ]]; then docker push toska/oodikone2-frontend:latest ; else :;fi"
